# llama

./: .gitignore  .gitmodules  README.md  gradle.properties  settings.gradle.kts
app/: .gitignore  build.gradle.kts  download_models.sh
app/src/main/: AndroidManifest.xml
app/src/main/java/com/negi/llama/: MainActivity.kt
app/src/main/java/com/negi/llama/ui/main/: LlamaScreen.kt  LlamaUiState.kt  LlamaViewModel.kt
app/src/main/java/com/negi/llama/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle.kts
nativelib/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
nativelib/src/main/java/com/negi/nativelib/: LlamaContext.kt  LlamaCpuConfig.kt
